--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -4,6 +4,7 @@ on:
     types: opened
     branches:
       - main # main
+      - "dev*" # dev-new dev-this-is-new
       - "dev-*" # dev-new dev-this-is-new
       - "feat/**" # feat/new feat/new/button
   workflow_dispatch:
